WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94575
[Chromium] DRT produces wrong back-forward list
https://bugs.webkit.org/show_bug.cgi?id=94575
Summary
[Chromium] DRT produces wrong back-forward list
Kent Tamura
Reported
2012-08-20 23:42:02 PDT
[Chromium] DRT produces wrong back-forward list
Attachments
Patch
(2.09 KB, patch)
2012-08-21 05:57 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-08-21 05:57:10 PDT
Created
attachment 159671
[details]
Patch
Adam Barth
Comment 2
2012-08-21 08:18:21 PDT
Comment on
attachment 159671
[details]
Patch Are there any observable effects of this change? (e.g., test that now pass that failed previously)
Adam Barth
Comment 3
2012-08-21 08:19:13 PDT
Comment on
attachment 159671
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=159671&action=review
> Tools/DumpRenderTree/chromium/WebViewHost.cpp:1675 > + bool nonBlankPageAfterReset = m_pageId == -1 && strcmp(frame->dataSource()->request().url().spec().data(), "about:blank");
It feels a bit wrong to be comparing against the string "about:blank"...
Adam Barth
Comment 4
2012-08-21 08:19:51 PDT
I fail at reading ChangeLogs.
WebKit Review Bot
Comment 5
2012-08-21 16:23:37 PDT
Comment on
attachment 159671
[details]
Patch Clearing flags on attachment: 159671 Committed
r126212
: <
http://trac.webkit.org/changeset/126212
>
WebKit Review Bot
Comment 6
2012-08-21 16:23:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug